fixed overflow for listview

--- a/client/src/components/documents.css
+++ b/client/src/components/documents.css
@@ -30,7 +30,7 @@
   height: 40vh;
   display: flex;
   justify-content: space-between;
-  
+
 }
 
 input[type="text"] {
@@ -51,12 +51,12 @@ input[type="text"] {
   color: white;
 }
 .documentsbox {
-  height: 100vh;
+  height: 100%;
   overflow: hidden;
 }
 .databox {
 
-  height: 70vh;
+  height: 50%;
   display: flex;
   align-content: space-between;
   box-shadow: 1px -1px 4px 0px rgba(0, 0, 0, 0.75);
